Added files via upload

--- a/MyFirstPlugin.rc
+++ b/MyFirstPlugin.rc
@@ -6,6 +6,8 @@ WAVEFORM_ID   PNG WAVEFORM_FN
 KNOB_SMALL_ID PNG KNOB_SMALL_FN
 FILTERMODE_ID PNG FILTERMODE_FN
 
+BACKGROUND_ID PNG BACKGROUND_FN
+
 #ifdef SA_API
 //Standalone stuff
 #include <windows.h>
